--- a/hive-example/hive-user-defined-separator/pom.xml
+++ b/hive-example/hive-user-defined-separator/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>hadoop-demo</artifactId>
+        <artifactId>My_hadoop</artifactId>
         <groupId>yore</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
-    <!--! hive自定义分隔符 -->
+    <!-- hive自定义分隔符 -->
     <artifactId>hive-user-defined-separator</artifactId>
 
     <properties>
@@ -23,16 +23,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-client</artifactId>
-            <version>2.7.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
-            <version>2.7.7</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
@@ -56,7 +46,6 @@
             </exclusions>-->
         </dependency>
 
-
     </dependencies>
 
 
@@ -65,7 +54,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <classifier>dist</classifier>
+                    <!--<classifier>dist</classifier>-->
                     <appendAssemblyId>true</appendAssemblyId>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -123,6 +112,5 @@
         </plugins>
 
     </build>
-
 
 </project>
