--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,36 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>hive-example/hive-user-defined-separator</module>
+        <module>hive-example/hive-garbled-detection</module>
     </modules>
+
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>1.8</java.version>
+
+        <hadopop.version>2.7.7</hadopop.version>
+
+    </properties>
+
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>2.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.7.7</version>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
