--- a/hive-example/hive-garbled-detection/pom.xml
+++ b/hive-example/hive-garbled-detection/pom.xml
@@ -16,6 +16,8 @@
 
 	<properties>
 		<junit.version>4.12</junit.version>
+		<!--<hive.version>1.2.2</hive.version>-->
+		<hive.version>1.1.0</hive.version>
 	</properties>
 
 
@@ -24,17 +26,17 @@
 		<dependency>
 			<groupId>org.apache.hive</groupId>
 			<artifactId>hive-exec</artifactId>
-			<version>1.2.2</version>
+			<version>${hive.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hive</groupId>
 			<artifactId>hive-jdbc</artifactId>
-			<version>1.2.2</version>
+			<version>${hive.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hive</groupId>
 			<artifactId>hive-serde</artifactId>
-			<version>1.2.2</version>
+			<version>${hive.version}</version>
 		</dependency>
 
 		<dependency>
