--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
         <java.version>1.8</java.version>
 
-        <hadopop.version>2.7.7</hadopop.version>
+        <!--<hadopop.version>2.7.7</hadopop.version>-->
+        <hadoop.version>2.6.5</hadoop.version>
 
     </properties>
 
@@ -31,12 +32,12 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>2.7.7</version>
+            <version>${hadoop.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
-            <version>2.7.7</version>
+            <version>${hadoop.version}</version>
         </dependency>
 
     </dependencies>
