update analysis of garbled characters by hive jdbc, and class that increases Chinese judgment.

--- a/hive-example/hive-garbled-detection/src/main/resources/my.properties
+++ b/hive-example/hive-garbled-detection/src/main/resources/my.properties
@@ -9,3 +9,6 @@ hive.connection.pool.size=10
 
 # 如果存在乱码，结果输出的条数
 result.limit.num=10
+# 结果输出的路径。 目前仅支持本地存储，后期可以添加HDFS存储。TODO hdfs://host:port/output_path
+result.out.path=/Users/yoreyuan/Downloads/
+
