--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,16 @@
         <java.version>1.8</java.version>
 
         <hadoop.version>2.7.7</hadoop.version>
-
+        <provided.scope>provided</provided.scope>
     </properties>
+    <profiles>
+        <profile>
+            <id>isCompile</id>
+            <properties>
+                <provided.scope>compile</provided.scope>
+            </properties>
+        </profile>
+    </profiles>
 
 
 
@@ -32,11 +40,13 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
+            <scope>${provided.scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
             <version>${hadoop.version}</version>
+            <scope>${provided.scope}</scope>
         </dependency>
 
     </dependencies>
