--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>hive-example/hive-user-defined-separator</module>
         <module>hive-example/hive-garbled-detection</module>
         <module>kudu-example/kudu_demo</module>
+        <module>presto-example/presto-jdbc</module>
     </modules>
 
 
@@ -50,6 +51,11 @@
             <scope>${provided.scope}</scope>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.4</version>
+        </dependency>
     </dependencies>
 
 
