Modify module name.

--- a/kudu/kudu_demo/pom.xml
+++ b/kudu/kudu_demo/pom.xml
@@ -54,6 +54,44 @@
                 </executions>
             </plugin>
 
+            <!-- 生成javadoc文档包的插件 -->
+            <!--<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                &lt;!&ndash;<version>2.10.2</version>&ndash;&gt;
+                <version>3.0.0</version>
+                <configuration>
+                    &lt;!&ndash;<aggregate>true</aggregate>&ndash;&gt;
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <additionalparam>-Xdoclint:none</additionalparam>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>-->
+            <!-- 生成sources源码包的插件 -->
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
 
     </build>
