--- a/kudu/kudu_demo/pom.xml
+++ b/kudu/kudu_demo/pom.xml
@@ -76,7 +76,6 @@
                     </execution>
                 </executions>
             </plugin>-->
-            <!-- 生成sources源码包的插件 -->
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>3.0.1</version>
@@ -91,6 +90,18 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.21.0</version>
+                <configuration>
+                    <!--<skip>true</skip>-->
+                    <skipTests>true</skipTests>
+                    <forkMode>once</forkMode>
+                    <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
+                </configuration>
             </plugin>
         </plugins>
 
