--- a/hadoop/film-ranking/pom.xml
+++ b/hadoop/film-ranking/pom.xml
@@ -34,21 +34,21 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>${hadoop.version}</version>
-            <!--<scope>${provided.scope}</scope>-->
+            <scope>${provided.scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
             <version>${hadoop.version}</version>
-            <!--<scope>${provided.scope}</scope>-->
+            <scope>${provided.scope}</scope>
         </dependency>
-
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
             <version>${hadoop.version}</version>
-            <!--<scope>${provided.scope}</scope>-->
+            <scope>${provided.scope}</scope>
         </dependency>
+
 
         <dependency>
             <groupId>org.jsoup</groupId>
