--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,17 @@
         <module>kudu/kudu_demo</module>
         <module>presto/presto-jdbc</module>
         <module>Impala/Imapla-jdbc</module>
+        <module>hadoop/parquet-demo</module>
+        <module>hbase/hbase-client</module>
     </modules>
+
+    <developers>
+        <developer>
+            <name>yore</name>
+            <email>suyuexi3@gmail.com</email>
+        </developer>
+    </developers>
+
 
 
     <properties>
