--- a/hive/hive-get-tables-info/pom.xml
+++ b/hive/hive-get-tables-info/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>yore</groupId>
     <artifactId>hive-get-tables-info</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
 
 
     <properties>
@@ -61,7 +61,7 @@
 
 
     <build>
-        <finalName>hive-get-tables-info-1.0</finalName>
+        <finalName>hive-get-tables-info-1.1</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -74,6 +74,7 @@
                         <manifest>
                             <!--<mainClass>yore.GetTablesInfoBySQL</mainClass>-->
                             <mainClass>yore.GetTablesInfoBeeline</mainClass>
+                            <mainClass>yore.GetTablesInfoHDFF</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
