dd Kerberos and LDAP documents and JDBC code.

--- a/hive/hive-get-tables-info/pom.xml
+++ b/hive/hive-get-tables-info/pom.xml
@@ -18,8 +18,8 @@
 
         <hadoop.version>2.7.7</hadoop.version>
         <hive.version>1.2.2</hive.version>
-        <provided.scope>provided</provided.scope>
-        <!--<provided.scope>compile</provided.scope>-->
+        <!--<provided.scope>provided</provided.scope>-->
+        <provided.scope>compile</provided.scope>
     </properties>
 
 
